Fixed a minor typo in title

--- a/Slides/slides.tex
+++ b/Slides/slides.tex
@@ -2,7 +2,7 @@
 
 \usepackage{graphicx}
 
-\usepackage[italian, english]{babel} 
+\usepackage[italian, english]{babel}
 \usepackage[utf8x]{inputenc}
 
 \usepackage{hyperref}
@@ -26,7 +26,7 @@
 \setbeamercolor{block body}{bg=android!40}
 \setbeamercolor{block title}{bg=android!90}
 
-\mode<presentation>{\usebackgroundtemplate{\includegraphics[height=\paperheight]{back.png}}} 
+\mode<presentation>{\usebackgroundtemplate{\includegraphics[height=\paperheight]{back.png}}}
 
 \setbeamercovered{transparent}
 
@@ -49,13 +49,13 @@ fontadjust=true,
 breaklines=true,breakatwhitespace=true,breakautoindent
 }
 
-\title{\textbf{Android App Developement: \\ Creare la nostra prima app.}}
+\title{\textbf{Android App Development: \\ Creare la nostra prima app.}}
 \author{Nicola Corti}
 \institute{GULP - Gruppo Utenti Linux Pisa \\ Universit\`a degli studi di Modena e Reggio Emilia\\ \medskip  \includegraphics[height=1.5cm]{unimore_logo.png} \hspace{1cm} \includegraphics[height=1.5cm]{gulp.png}}
 \logo{gulp.png}
 \date{19 marzo 2015}
 
- 
+
 \begin{document}
 
 \begin{frame}
@@ -217,7 +217,7 @@ Android \`e presente su dispositivi che hanno monitor molto differenti fra di lo
 \pause
 
 \begin{block}{}
-\`E essenziale che l'esperienza utente sia gradevole su ogni display dove deve girare l'app; assicurandosi che gli oggetti a schermo si dispongano in modo armonioso. 
+\`E essenziale che l'esperienza utente sia gradevole su ogni display dove deve girare l'app; assicurandosi che gli oggetti a schermo si dispongano in modo armonioso.
 \end{block}
 \end{frame}
 
@@ -440,7 +440,7 @@ Per chi utilizza Ubuntu a 64 bit \`e necessario scaricare le librerie a 32 bit.
 	\medskip
 	\begin{block}{Modalit\`a Debug}
 	Si deve collegare il dispositivo e attivare la \textbf{Modalit\`a Debug} (dentro il men\`u Opzioni per lo Sviluppatore).
-	\end{block}	
+	\end{block}
 \end{frame}
 
 
